# klein

./: .clang-format  .clangd  .gitignore  Makefile  README.md  stdlib.micro
.github/workflows/: test.yml
bindings/c/: klein.h
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/crates/cklein/: Cargo.toml  README.md
bindings/rust/crates/cklein-core/: Cargo.toml  README.md  build.rs
bindings/rust/crates/cklein-core/lib/: klein.h
bindings/rust/crates/cklein-core/src/: checker.rs  internal.rs  lexer.rs  lib.rs  parser.rs  runner.rs
bindings/rust/crates/cklein-macros/: Cargo.toml  README.md
bindings/rust/crates/cklein-macros/src/: lib.rs
bindings/rust/crates/cklein/src/: lib.rs
bindings/rust/crates/cklein/tests/: test.rs
bindings/rust/src/: internal.rs  lexer.rs  lib.rs  runner.rs
bindings/rust/tests/: test.rs
include/: builtin.h  context.h  io.h  lexer.h  list.h  parser.h  result.h  runner.h  stdlib.h  sugar.h  typechecker.h  util.h
src/: builtin.c  context.c  io.c  lexer.c  list.c  main.c  parser.c  result.c  runner.c  sugar.c  typechecker.c  util.c
tests/: test.kl  test.klein  test.micro
tests/c/: Makefile  main.c  test.c
tests/klein/: test.kl
