[package]
name = "cklein"
version = "0.1.0"
description = "High-level safe bindings to the Klein scripting language."
authors = ["Violet Iapalucci"]
license = "LGPL-3.0"
edition = "2021"
repository = "https://github.com/klein-language/klein/tree/main/bindings/rust"

[dependencies]
cklein-core = { path = "../cklein-core" }
cklein-macros = { path = "../cklein-macros" }
